--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,16 @@ jobs:
     - name: Run Tests
       working-directory: src
       run: |
-        pytest
+        pytest --cov-report xml:cov.xml --cov blog/
+    - name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: src/cov.xml
+        badge: true
+        fail_below_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '60 80'
