--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,13 +27,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
-      working-directory: src
       run: |
-        pytest --cov-report xml:cov.xml --cov blog/
+        pytest --cov-report xml:cov.xml --cov-report=json --cov=blog src/
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: src/cov.xml
+        filename: cov.xml
         badge: true
         fail_below_min: true
         format: markdown
@@ -42,3 +41,8 @@ jobs:
         indicators: true
         output: both
         thresholds: '60 80'
+    - name: Update Coverage Badge
+      # GitHub actions: default branch variable
+      # https://stackoverflow.com/questions/64781462/github-actions-default-branch-variable
+      if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+      uses: we-cli/coverage-badge-action@main
