--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,11 +28,12 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        pytest --cov-report xml:cov.xml --cov-report=json --cov=blog src/
+        mkdir -p coverage
+        pytest --cov-report xml:coverage/cov.xml --cov-report=json:coverage/coverage-summary.json --cov=blog src/
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: cov.xml
+        filename: coverage/cov.xml
         badge: true
         fail_below_min: true
         format: markdown
