added importer, TS on models, index

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -4,3 +4,5 @@ max-line-length = 120
 [tool:pytest]
 django_find_project = True
 DJANGO_SETTINGS_MODULE = config.settings
+addopts = --cov=blog --cov=jsonplaceholder --cov-fail-under=100
+
