--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,14 +1,28 @@
+api-client==1.3.1
 asgiref==3.7.2
 attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 coverage==7.4.3
+cssbeautifier==1.15.1
 Django==5.0.2
 django-dynamic-fixture @ git+https://github.com/paulocheque/django-dynamic-fixture.git@eb4424798bb6ba60c3eab5ca1a23f86891051516
 djangorestframework==3.14.0
+djlint==1.34.1
+EditorConfig==0.12.4
+html-tag-names==0.1.2
+html-void-elements==0.1.0
+idna==3.6
 inflection==0.3.1
 iniconfig==2.0.0
+jsbeautifier==1.15.1
+json5==0.9.17
 lazy-object-proxy==1.10.0
 Markdown==3.5.2
 packaging==23.2
+pathspec==0.12.1
 pluggy==1.4.0
 pytest==7.4.4
 pytest-assert-utils==0.3.1
@@ -18,7 +32,15 @@ pytest-django==4.8.0
 pytest-drf==1.1.3
 pytest-fixture-order==0.1.4
 pytest-lambda==1.3.0
+pytest-mock==3.12.0
 pytz==2024.1
+PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+six==1.16.0
 sortedcontainers==2.4.0
 sqlparse==0.4.4
+tenacity==8.2.3
+tqdm==4.66.2
+urllib3==2.2.1
 wrapt==1.16.0
