--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,10 +12,14 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 coverage==7.4.3
+cron-descriptor==1.4.3
 cssbeautifier==1.15.1
 dj-database-url==2.1.0
-Django==5.0.2
+Django==4.2.10
+django-celery-beat==2.5.0
 django-dynamic-fixture @ git+https://github.com/paulocheque/django-dynamic-fixture.git@eb4424798bb6ba60c3eab5ca1a23f86891051516
+django-object-actions==4.2.0
+django-timezone-field==6.1.0
 djangorestframework==3.14.0
 djlint==1.34.1
 EditorConfig==0.12.4
@@ -43,6 +47,7 @@ pytest-drf==1.1.3
 pytest-fixture-order==0.1.4
 pytest-lambda==1.3.0
 pytest-mock==3.12.0
+python-crontab==3.0.0
 python-dateutil==2.8.2
 pytz==2024.1
 PyYAML==6.0.1
