--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,8 +1,5 @@
-[flake8]
-max-line-length = 120
-
 [tool:pytest]
 django_find_project = True
 DJANGO_SETTINGS_MODULE = config.settings
-addopts = --cov=blog --cov=jsonplaceholder --cov-fail-under=80
-
+addopts = --cov=blog --cov=jsonplaceholder 
+    --cov-fail-under=90 --cov-report=xml:cov.xml --cov-report=term-missing
