--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,13 @@
 amqp==5.2.0
 api-client==1.3.1
 asgiref==3.7.2
+astroid==3.1.0
 attrs==23.2.0
 billiard==4.2.0
 celery==5.3.6
+celery-stubs==0.1.3
 certifi==2024.2.2
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
@@ -14,30 +17,47 @@ colorama==0.4.6
 coverage==7.4.3
 cron-descriptor==1.4.3
 cssbeautifier==1.15.1
+dill==0.3.8
+distlib==0.3.8
 dj-database-url==2.1.0
 Django==4.2.10
 django-celery-beat==2.5.0
 django-dynamic-fixture @ git+https://github.com/paulocheque/django-dynamic-fixture.git@eb4424798bb6ba60c3eab5ca1a23f86891051516
 django-object-actions==4.2.0
+django-stubs==4.2.7
+django-stubs-ext==4.2.7
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
+djangorestframework-stubs==3.14.5
 djlint==1.34.1
 EditorConfig==0.12.4
+filelock==3.13.1
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+identify==2.5.35
 idna==3.6
 inflection==0.3.1
 iniconfig==2.0.0
+isort==5.13.2
 jsbeautifier==1.15.1
 json5==0.9.17
 kombu==5.3.5
 lazy-object-proxy==1.10.0
 Markdown==3.5.2
+mccabe==0.7.0
+mypy==1.7.1
+mypy-extensions==1.0.0
+nodeenv==1.8.0
 packaging==23.2
 pathspec==0.12.1
+platformdirs==4.2.0
 pluggy==1.4.0
+pre-commit==3.6.2
 prompt-toolkit==3.0.43
 psycopg2==2.9.9
+pylint==3.1.0
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 pytest==7.4.4
 pytest-assert-utils==0.3.1
 pytest-common-subject==1.0.6
@@ -58,10 +78,15 @@ six==1.16.0
 sortedcontainers==2.4.0
 sqlparse==0.4.4
 tenacity==8.2.3
+tomlkit==0.12.4
 tqdm==4.66.2
+types-pytz==2024.1.0.20240203
+types-PyYAML==6.0.12.12
+types-requests==2.31.0.20240218
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 vine==5.1.0
+virtualenv==20.25.1
 wcwidth==0.2.13
 wrapt==1.16.0
