--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,5 +25,12 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material
+      - run: pip install mkdocs-autorefs==1.0.0
+          mkdocs-gen-files==0.5.0
+          mkdocs-literate-nav==0.6.1
+          mkdocs-material==9.5.12
+          mkdocs-material-extensions==1.3.1
+          mkdocs-section-index==0.3.8
+          mkdocstrings==0.24.1
+          mkdocstrings-python==1.8.0
       - run: mkdocs gh-deploy --force
