--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,6 +3,6 @@ python_version = 3.11
 disallow_untyped_defs = true
 warn_return_any = true
 ignore_missing_imports = True
-disable_error_code = var-annotated, has-type
+disable_error_code = var-annotated, has-type, attr-defined
 mypy_path = src/
 exclude = tests|migrations
