--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,23 @@
 site_name: DRF-based Blog and Syncher
 theme:
   name: material
+  features:
+    - content.code.copy
+    - content.code.select
+    - content.code.annotate
 markdown_extensions:
   - admonition
   - codehilite
   - pymdownx.highlight:
       use_pygments: true
       pygments_lang_class: true
+      anchor_linenums: true
+      line_spans: __span
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.mark
+
 plugins:
   - search
   - gen-files:
